crates/fig-lexer/tests/snapshots/integration_tests__annotations__multi_args.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Hash
- Ident: something
- LParen
- Ident: C
- Comma
- StringLiteral: hello world
- RParen
- Newline
- Packed
- Struct
- Ident: CPacked
- Newline
- Indent
- Ident: a
- Colon
- U8
- Newline
- Ident: b
- Colon
- I32
- Newline
- Dedent
